# traderoo

./: .gitignore  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: Dockerfile  pyproject.toml
app/tests/: test_config.py  test_health.py
app/traderoo/: __init__.py  config.py  main.py
applications/traderoo/argocd/: application.yaml  poc.yaml
applications/traderoo/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/argocd/: traderoo-application.yaml
deploy/k8s/base/: configmap.yaml  kustomization.yaml
deploy/k8s/overlays/local/: configmap-patch.yaml
docs/: hld.md
docs/adr/: 0001-local-kubernetes-with-k3d.md  0002-gitops-with-argocd.md  0003-paper-only-mvp.md  0004-project-structure.md  0005-in-cluster-vault-for-application-secrets.md  0006-separate-platform-services-from-application-gitops.md  0007-database-persistence-strategy.md
docs/c4/: 01-system-context.md  02-container-view.md  03-component-view.md
docs/delivery/: chunk-plan.md  ci-quality-gates.md  definition-of-done.md  validation-matrix.md
docs/product/: mvp-scope.md  subsystem-map.md
docs/safety/: ai-boundaries.md  paper-only-guardrails.md  secrets-management.md
platform/argocd/: install.md
platform/bootstrap/argocd/: install.md  root-applications-application.yaml  root-platform-application.yaml
platform/charts/platform-services/: .helmignore  Chart.yaml  README.md  values.yaml
platform/charts/platform-services/templates/: README.md  _helpers.tpl  (+3 more)
platform/k3d/: cluster.yaml
(+2 files in other folders)
